fix(sudoku): fixed the images of different width and height would appear distorted within a square
N

--- a/src/components/Sudoku/_style.scss
+++ b/src/components/Sudoku/_style.scss
@@ -44,6 +44,10 @@ $sudokuPrefixCls: 'vo-sudoku';
       .#{$sudokuPrefixCls}-image-outer {
         width: 171px;
         height: 274px;
+        img {
+          width: auto !important;
+          height: 100% !important;
+        }
       }
     }
   }
@@ -161,11 +165,11 @@ $sudokuPrefixCls: 'vo-sudoku';
 .#{$sudokuPrefixCls}-image {
   min-height: $skeleton-row-height;
   background: linear-gradient(
-    100deg,
-    rgba(255, 255, 255, 0) 40%,
-    rgba(255, 255, 255, 0.5) 50%,
-    rgba(255, 255, 255, 0) 60%
-  )
+      100deg,
+      rgba(255, 255, 255, 0) 40%,
+      rgba(255, 255, 255, 0.5) 50%,
+      rgba(255, 255, 255, 0) 60%
+    )
     $loading-grey;
   background-color: $loading-grey;
   background-position-x: 180%;
